compiler/tests/invalid_programs/syntax/no_end_loop.jm
!SyntaxError

loop
  puts("foo")
  break
